[package]
name = "kcelectionapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
csv = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"
redis = { version = "0.26.1", features = ["tokio-comp"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
maud = { version = "0.25", features = ["actix-web"] }
listenfd = "0.3"
